tests/NormalTests/paczka1/small_fuzzy/71339448.err
Error in line 3: mInwc A426 52,8
Error in line 9: XjKUce S980 77,1
Error in line 10: XjKUce A426 5,6
